[gd_scene load_steps=4 format=3 uid="uid://cllqoqoeaimyt"]

[ext_resource type="Script" path="res://textbox.gd" id="1_8rcb7"]
[ext_resource type="FontFile" uid="uid://cn2vnra5sxbtt" path="res://fonts/NESCyrillic.ttf" id="2_8huba"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oow6x"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[node name="Textbox" type="CanvasLayer"]
script = ExtResource("1_8rcb7")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -69.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_oow6x")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2

[node name="StartSymbol" type="Label" parent="MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_8huba")
text = "*"

[node name="MainText" type="Label" parent="MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_8huba")
text = "placeholder"
autowrap_mode = 3
clip_text = true

[node name="EndSymbol" type="Label" parent="MarginContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(7, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_8huba")
text = "*"
